analysis/low-level-api-fir/testData/lazyResolve/errors/propertyDuplicatedContextParameter.kt
// LANGUAGE: +ContextParameters

context(c<caret>: Int)
context(c: String)
val foo get() = 0